# os-lab-4

./: .gitignore  CMakeLists.txt  README.md  Receiver.cpp  Sender.cpp  Test.cpp  core.cpp  core.h  logic.h  message.h
include/: core.h  logic.h
src/: Receiver.cpp  Sender.cpp  core.cpp
tests/: Test.cpp
